--- a/app/views/regions/edit.html.erb
+++ b/app/views/regions/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Region</h1>
+<div class="container">
 
-<%= render 'form' %>
+  <%= render 'header' %>
+  <span class="label label-danger">Edit</span>
+  <p id="notice"><%= notice %></p>
+  
+  <%= render 'form' %>
+  
+  <%= link_to 'Show', @region, :class => 'btn btn-primary spacer' %>
+  <%= link_to 'Back', regions_path, :class => 'btn btn-primary spacer' %>
 
-<%= link_to 'Show', @region %> |
-<%= link_to 'Back', regions_path %>
+</div>
