--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,29 +1,55 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  
+    <%= render 'header' %>
+    
+    <p id="notice"><%= notice %></p>
+    
+    <div>
+      <h1>Listing Regions</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>Display Name</th>
+            <th>Image</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% @regions.each do |region| %>
+            <tr>
+              <td><%= region.id %></td>
+              <td><%= region.display_name %></td>
+              <td><%= link_to Image.find_by_id(region.image_id).filename, Image.find_by_id(region.image_id) %></td>
+              <td><%= link_to 'Show', region %></td>
+              <td><%= link_to 'Edit', edit_region_path(region) %></td>
+              <td><%= link_to 'Destroy', region, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    
+    <a href="/regions/new" class="btn btn-default" role="button">New Region</a></a>
 
-<h1>Listing Regions</h1>
+    <div>
+        <h1>Batch Upload</h1>
+        <%= form_tag("/regions/upload", method: "post", class: "form-horizontal") do %>
+            <div class="form-group">
+                <div class="col-sm-10">
+                  <%= text_area_tag :json_data, nil, :required => true, :rows => 10, :class => "form-control",
+                  :placeholder => "[\n\t{\n\t\t\"id\": 1,\n\t\t \"display_name\": \"Le Mars, lowa\",\n\t\t \"image_id\": 1\n \t}\n]"%>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <%= submit_tag("Upload", :class => "btn btn-default" ) %>
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Display name</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @regions.each do |region| %>
-      <tr>
-        <td><%= region.display_name %></td>
-        <td><%= region.image %></td>
-        <td><%= link_to 'Show', region %></td>
-        <td><%= link_to 'Edit', edit_region_path(region) %></td>
-        <td><%= link_to 'Destroy', region, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Region', new_region_path %>
