--- a/app/views/regions/new.html.erb
+++ b/app/views/regions/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Region</h1>
+<div class="container">
+
+<%= render 'header' %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', regions_path %>
+<%= link_to 'Back', regions_path, :class => 'btn btn-primary spacer' %>
+
+
+</div>
