--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,14 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<p>
-  <strong>Display name:</strong>
-  <%= @region.display_name %>
-</p>
+  <%= render 'header' %>
+  <p id="notice"><%= notice %></p>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Display Name</h3>
+    </div>
+    <div class="panel-body">
+       <%= @region.display_name %>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Image</h3>
+    </div>
+    <div class="panel-body">
+       <%=  link_to @region_image.filename, @region_image %>
+    </div>
+  </div>
+  
+  <%= link_to 'Edit', edit_region_path(@region), :class => 'btn btn-primary spacer' %>
+  <%= link_to 'Back', regions_path, :class => 'btn btn-primary spacer' %>
 
-<p>
-  <strong>Image:</strong>
-  <%= @region.image %>
-</p>
+</div>
 
-<%= link_to 'Edit', edit_region_path(@region) %> |
-<%= link_to 'Back', regions_path %>
+
+
