added img display

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,6 +4,12 @@
   <p id="notice"><%= notice %></p>
   
   <div class="panel panel-default">
+    <div class="panel-body">
+       <img style="max-width:256px;max-height:256px;", src=<%= asset_path(@image.filename) %>>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Cateogry</h3>
     </div>
