--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Product</h1>
+<div class="container">
 
-<%= render 'form' %>
+  <%= render 'header' %>
+  <span class="label label-danger">Edit</span>
+  <p id="notice"><%= notice %></p>
+  
+  <%= render 'form' %>
+  
+  <%= link_to 'Show', @product, :class => 'btn btn-primary spacer' %>
+  <%= link_to 'Back', products_path, :class => 'btn btn-primary spacer' %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+</div>
