--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Product</h1>
+<div class="container">
+
+<%= render 'header' %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', products_path %>
+<%= link_to 'Return to Products Listing', products_path, :class => 'btn btn-primary spacer' %>
+
+
+</div>
+
