--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,54 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+  <%= render 'header' %>
+  <p id="notice"><%= notice %></p>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Name</h3>
+    </div>
+    <div class="panel-body">
+       <%= @product.name %>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">UPC Code</h3>
+    </div>
+    <div class="panel-body">
+       <%= @product.upc_code %>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Product Code</h3>
+    </div>
+    <div class="panel-body">
+       <%= @product.product_code %>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Sell by Date</h3>
+    </div>
+    <div class="panel-body">
+       <%= @product.sell_by_date %>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Image</h3>
+    </div>
+    <div class="panel-body">
+      <td><%= link_to Image.find_by_id(@product.image_id).filename, Image.find_by_id(@product.image_id) %></td>
+    </div>
+  </div>
+  
+  <%= link_to 'Edit', edit_product_path(@product), :class => 'btn btn-primary spacer' %>
+  <%= link_to 'Back', products_path, :class => 'btn btn-primary spacer' %>
 
-<p>
-  <strong>Upc code:</strong>
-  <%= @product.upc_code %>
-</p>
-
-<p>
-  <strong>Product code:</strong>
-  <%= @product.product_code %>
-</p>
-
-<p>
-  <strong>Sell by date:</strong>
-  <%= @product.sell_by_date %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= @product.image_id %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+</div>
