--- a/app/views/recalls/_form.html.erb
+++ b/app/views/recalls/_form.html.erb
@@ -10,32 +10,44 @@
       </ul>
     </div>
   <% end %>
+  
+  <label for="product_id">Product id</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :product_id, class: "form-control", placeholder: 1 %>
+  </div>
+  
 
-  <div class="field">
-    <%= f.label :product_id %><br>
-    <%= f.text_field :product_id %>
+  <label for="filename">Reason</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :reason, class: "form-control", placeholder: "illegal addictive." %>
   </div>
-  <div class="field">
-    <%= f.label :reason %><br>
-    <%= f.text_field :reason %>
+  
+  <label for="description">Level id</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :level_id, class: "form-control", placeholder: 1 %>
   </div>
-  <div class="field">
-    <%= f.label :level_id %><br>
-    <%= f.text_field :level_id %>
+  
+  <label for="description">Region id</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :region_id, class: "form-control", placeholder: 1 %>
   </div>
-  <div class="field">
-    <%= f.label :region_id %><br>
-    <%= f.text_field :region_id %>
+  
+    <label for="description">Contact id</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :contact_id, class: "form-control", placeholder: 1 %>
   </div>
-  <div class="field">
-    <%= f.label :contact_id %><br>
-    <%= f.text_field :contact_id %>
+  
+  <label for="description">date</label>
+  <div class="input-group">
+    <%= f.datetime_select :date, class: "form-control", placeholder: "2016-10-23 05:56:00 UTC" %>
   </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.datetime_select :date %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  
+  <%= f.submit 'Confirm', :class => 'btn btn-primary spacer' %>
+  
 <% end %>
+
