--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', recalls_path %>
+<%= link_to 'Back', recalls_path, :class => 'btn btn-primary spacer' %>
