--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,16 @@
           </ul>
         </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+          <% if @current_user %>
+            <li> <%= link_to @current_user.username, '' %> </li> 
+            <li> <%= link_to "Logout", '/logout' %> </li>
+          <% else %>
+            <li><%= link_to 'Login', '/login' %> </li> 
+            <li><%= link_to 'Signup', '/signup' %> </li>
+          <% end %>
+      </ul>
+      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
