--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,12 +10,25 @@
       </ul>
     </div>
   <% end %>
+  
+  <label for="upc_code">Username</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.text_field :username, class: "form-control" %>
+  </div>
+  
+  <label for="upc_code">Password</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.password_field :password, class: "form-control" %>
+  </div>
+  
+  <label for="upc_code">Password Confirmation</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">@</span>
+    <%= f.password_field :password_confirmation, class: "form-control" %>
+  </div>
 
-  <div class="field">
-    <%= f.label :contact_id %><br>
-    <%= f.text_field :contact_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit 'Confirm', :class => 'btn btn-primary spacer' %>
+
 <% end %>
