--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Contact</th>
+      <th>Username</th>
+      <th>Email</th>
+      <th>Phone</th>
+      <th>Password digest</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +16,10 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.contact %></td>
+        <td><%= user.username %></td>
+        <td><%= user.email %></td>
+        <td><%= user.phone %></td>
+        <td><%= user.password_digest %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
