--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
             <li><a href="/products">Products</a></li>
             <li><a href="/recalls">Recalls</a></li>
             <li><a href="/regions">Regions</a></li>
+            <li><a href="/purchases">Purchases</a></li>
           </ul>
         </li>
       </ul>
