--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,7 +1,8 @@
+<div class="container">
+
+
+<%= render 'header' %>
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Purchases</h1>
-
 <table>
   <thead>
     <tr>
@@ -29,3 +30,4 @@
 <br>
 
 <%= link_to 'New Purchase', new_purchase_path %>
+</div>
